# dash-mpd-cli

./: .justfile  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  container-parallel.yml  container.yml  freebsd.yml  haiku.yml  macos.yml  mdbook.yml  release-bin-manual.yml  release.yml  solaris.yml  trivy.yml
doc/: book.toml
doc/src/: SUMMARY.md  about.md  container.md  feedback.md  installation.md  muxing.md  rewriting.md  stream_selection.md  usage.md  why.md
etc/: Containerfile_linux_aarch64  Containerfile_linux_amd64  Containerfile_linux_armv7  Containerfile_linux_ppc64le  Containerfile_linux_riscv64
src/: cookies.rs  main.rs
tests/: basic.rs  basic_auth.rs  bearer_auth.rs  client-certificate.rs  commandline.rs  conformity.rs  container.rs  create-certs.sh  decryption.rs  fetch_fault_injection.rs  headers.rs  muxers.rs  progressbar.rs  role.rs  root-certificate.rs  subtitles.rs  xslt.rs
tests/common/: mod.rs
tests/fixtures/: admanager.xml  avod-mediatailor.mpd  client-cert.crt  client-cert.key  client-id.pem  jurassic-compact-5975.mpd  localhost-cert.crt  localhost-cert.key  rewrite-drop-audio.xslt  rewrite-drop-dai.xslt  rewrite-drop-dynamic.xslt  rewrite-drop-label.xslt  rewrite-drop-short-periods.xslt  rewrite-init-media-segments.xslt  rewrite-resolution.xslt  rewrite-rickroll.xslt  rewrite-stylesheet-error.xslt  root-CA.crt  telenet-mid-ad-rolls.mpd  vod-aip-unif-streaming.mpd
