[package]
name = "dash-mpd-cli"
version = "0.2.27"
authors = ["Eric Marsden <eric.marsden@risk-engineering.org>"]
license = "MIT"
description = "Download media content from a DASH-MPEG or DASH-WebM MPD manifest."
readme = "README.md"
repository = "https://github.com/emarsden/dash-mpd-cli"
documentation = "https://emarsden.github.io/dash-mpd-cli/"
keywords = ["video", "streaming", "DASH", "MPEG", "download"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
edition = "2021"
publish = true


[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
time = { version = "0.3.41", features = ["local-offset"] }
dash-mpd = { version = "0.18.4", default-features = false, features = ["fetch", "compression", "rustls-tls", "scte35", "http2"] }
reqwest = { version = "0.12.22", default-features = false, features = ["gzip", "rustls-tls", "socks", "json", "cookies", "http2"] }
# We need to stay synchronized with the version used in the decrypt-cookies crate.
strum = { version = "0.26.3", features = ["derive"] }
colored = "3.0.0"
indicatif = "0.18.0"
clap = { version = "=4.4.18", features = ["cargo", "unicode", "wrap_help"] }
serde_json = "1.0.142"
versions = "7.0.0"
fs-err = "3.1.1"
number_prefix = "0.4.0"
url = "2.5.4"
anyhow = "1.0.98"
tempfile = "3.20.0"
decrypt-cookies = { version = "0.10.1", features = ["reqwest"], optional = true }


[dev-dependencies]
rustls = { version = "0.23.29", features = ["aws_lc_rs"] }
rustls-pki-types = "1.12.0"
rustls-pemfile = "2.2.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "time", "macros"] }
tokio-rustls = "0.26.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
test-log = { version = "0.2.18", features = ["trace"] }
http = "1.3.1"
hyper = "1.6.0"
hyper-util = "0.1.16"
axum = "0.8.4"
hyper-serve = { version = "0.6.2", features = ["tls-rustls"] }
axum-auth = "0.8.1"
quick-xml = { version = "0.38.1", features = ["serialize"] }
mp4 = "0.14.0"
lazy_static = "1.5.0"
ffprobe = "0.4.0"
file-format = { version = "0.28.0", features = ["reader"] }
json = "0.12.4"
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"

[features]
default = ["cookies"]
cookies = ["decrypt-cookies"]


[profile.release]
opt-level = "z"  # optimize for size
lto = "fat"
codegen-units = 1
