[package]
name = "dash-mpd-cli"
version = "0.2.33"
authors = ["Eric Marsden <eric.marsden@risk-engineering.org>"]
license = "MIT"
description = "Download media content from a DASH-MPEG or DASH-WebM MPD manifest."
readme = "README.md"
repository = "https://github.com/emarsden/dash-mpd-cli"
documentation = "https://emarsden.github.io/dash-mpd-cli/"
keywords = ["video", "streaming", "DASH", "MPEG", "download"]
categories = ["command-line-utilities", "multimedia", "multimedia::video"]
edition = "2021"
publish = true


[dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "time", "json", "fmt", "std"] }
time = { version = "0.3.47", features = ["local-offset"] }
dash-mpd = { version = "0.20.3", default-features = false, features = ["fetch", "compression", "scte35", "http2"] }
reqwest = { version = "0.13.4", default-features = false, features = ["gzip", "socks", "json", "cookies", "http2", "rustls"] }
indicatif = "0.18.4"
clap = { version = "4.5.60", features = ["cargo", "unicode", "wrap_help"] }
serde_json = "1.0.150"
json-escape = "0.3.1"
versions = "7.0.0"
fs-err = "3.3.0"
unit-prefix = "0.5.2"
url = "2.5.8"
anyhow = "1.0.102"
tempfile = "3.27.0"
decrypt-cookies = { version = "0.11.1", optional = true }


[dev-dependencies]
rustls = { version = "0.23.40", features = ["aws_lc_rs"] }
rustls-pki-types = "1.14.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time", "macros"] }
tokio-rustls = "0.26.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt", "time", "std"] }
test-log = { version = "0.2.20", features = ["trace"] }
http = "1.4.1"
hyper = "1.10.1"
hyper-util = "0.1.20"
axum = { version = "0.8.9", features = ["tokio", "http1"] }
axum-auth = "0.8.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
quick-xml = { version = "0.40.1", features = ["serialize"] }
mp4 = "0.14.0"
lazy_static = "1.5.0"
ffprobe = "0.4.0"
file-format = { version = "0.29.0", features = ["reader"] }
jzon = "0.12.5"
assert_cmd = "2.2.2"
assert_fs = "1.1.3"
predicates = "3.1.4"

[features]
default = ["cookies", "rustls"]
cookies = ["dep:decrypt-cookies"]
sandbox = ["dash-mpd/sandbox"]
native-tls = ["dash-mpd/native-tls", "reqwest/native-tls"]
rustls = ["dash-mpd/rustls", "reqwest/rustls"]

[profile.release]
opt-level = "z"  # optimize for size
lto = "fat"
codegen-units = 1


[target.'cfg(target_os="macos")'.dependencies]
decrypt-cookies = { version = "0.11.1", features = ["Safari"], optional = true }
